--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@solana/web3.js": "^1.91.4",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
